# tuebingen-search-engine

./: .gitignore  README.md  REPORT.md  pyproject.toml  queries.txt
crawl/: README.md  pyproject.toml  seeds.toml
crawl/data/crawl/: crawl_state.json  pages.jsonl
crawl/data/crawl/en.wikipedia.org/: 6065e0ad-wiki-t-c3-bcbingen.html  ec98f611-wiki-kunsthalle_t-c3-bcbingen.html
crawl/data/crawl/en.wikivoyage.org/: b9df6ffa-wiki-t-c3-bcbingen.html
crawl/data/crawl/historicgermany.com/: aa1f7464-tuebingen.html
crawl/data/crawl/uni-tuebingen.de/: 09d46def-en-41946.html  0f46e4da-en-research-research-infrastructure.html  1445e2c6-en-2717.html  15ed0785-en-1648.html  174cb71a-en-university-how-to-get-here.html  1e40e34c-en-260658.html  1f002b11-en-faculties-interfaculty-institutes.html  1f62187d-en-research-innovation.html  247a083b-en-280020.html  25a97513-en-295533.html  2811e72e-en-148761.html  28cf9bb3-en-international.html  31fbe73a-en-206739.html  33a4ba76-en-university-profile.html  3baebe15-en-login.html  3dcf043f-en-207240.html  3f85c2d9-en-study-profile.html  41b561f0-en-university-equity.html  42ab4f64-en-university-organization-and-management.html  43854ce5-en-83177.html  50c279ce-en-622.html  51818df3-en-study-prospective-students.html  541d2298-en-university-life-on-campus.html  5a8d0a00-en-246106.html  5ad3d650-en-teaching-staff.html  5ae05c7e-en-research-core-research.html  5bfb5ab9-en-university-careers.html  654c3499-en-252536.html  657811e7-en-238572.html  69106a40-en-research-support-for-junior-researchers.html  6b56975d-en-staff.html  7688bfcc-en.html  77fe449a-en-326.html  7e24647c-en-study-application-and-enrollment.html  897c1b3c-en-248777.html  8be7fbc1-en-research-centers-and-institutes.html  93e962d8-en-research.html  95fff6a7-en-study-advice-and-info.html  9ee0d74e-en-business.html  a7b98341-en-data-privacy-statement.html  (+25 more)
crawl/data/crawl/velvetescape.com/: d5c72961-things-to-do-in-tubingen.html
crawl/data/crawl/www.germany.travel/: d99d310c-en-cities-culture-tuebingen.html.html
crawl/data/crawl/www.komoot.com/: e66ae365-guide-355570-castles-in-tuebingen-district.html
crawl/data/crawl/www.tuebingen.mpg.de/: 21751428-en.html
crawl/data/crawl/www.unimuseum.uni-tuebingen.de/: 03f9d842-en-mut.html  0c6c7750-en-exhibitions-online-exhibitions.html  19ccf079-en-info.html  2d71524f-en-research-education-sander-estate-project.html  2e33bf03-en-research-education.html  3472f45a-en-research-education-master-profile-museum-collections-musa.html  42a74753-en-info-bookable-courses.html  468cfc1c-en-info-bookable-guided-tours.html  5e9cd2a2-en-museum-at-hohentuebingen-castle.html  63b14bed-en-collections-ethnological-collection.html  6702d1bd-en-collections.html  77d78310-en-exhibitions-archive.html  7d8ff2aa-en-shop.html  7ece8a5c-en-exhibitions-special-exhibitions.html  8e92eefa-en-weltkulturerbe.html  905f66b4-en-exhibitions-visit-the-mut-exhibitions.html  ae079f2b-en-research-education-publications.html  b2067f7a-en-museum-at-hohentuebingen-castle-museum-ancient-cultures.html  (+8 more)
crawl/src/crawler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
crawl/src/tuebingen_crawler/: crawler.py  extract.py  fetcher.py  frontier.py  heuristic.py  language.py  link_classifier.py  main.py  models.py  page.py  page_classifier.py  relevance.py  report.py  robots.py  save_pages.py  storage.py  urls.py
crawl/tests/: test_crawler.py  test_fetcher.py  test_frontier.py  test_heuristic.py  test_language.py  test_link_classifier.py  test_page.py  test_page_classifier.py  test_relevance.py  test_save_pages.py  test_storage.py  test_urls.py
labeling/: README.md  pyproject.toml
labeling/queries/: tuebingen_serp_queries.txt
labeling/src/tuebingen_labeling/: __init__.py  server.py
labeling/static/: app.js  index.html  styles.css
labeling/tests/: test_link_candidates.py
search/: Cargo.toml  README.md  pyproject.toml
search/src/tuebingen_search/: __init__.py  api.py  batch.py  cli.py  desktop.py  html.py  indexer.py  load_pages.py  main.py  models.py  scoring.py  search.py  snippets.py  storage.py  tokenizer.py
search/tests/: conftest.py  helpers.py  test_api.py  test_batch.py  test_cli.py  test_desktop.py  test_html.py  test_indexer.py  test_load_pages.py  test_prefix.py  test_proximity.py  test_search.py  test_snippets.py  test_tokenizer.py
tuebingen_search/: Cargo.toml  pyproject.toml
tuebingen_search/src/: main.rs
tuebingen_search/tuebingen_search/: search.py  tokenizer.py
verdict-ml/: README.md  pyproject.toml
verdict-ml/src/verdict_ml/: __init__.py  base.py  metrics.py  paths.py  train.py
verdict-ml/tests/: test_base.py  test_link_features.py  test_metrics.py  test_page_features.py
(+15 files in other folders)
