[project]
name = "tuebingen-search"
version = "0.1.0"
description = "Small search engine for HTML files"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "msgpack>=1.1.0",
    "selectolax>=0.4.10",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
index = "tuebingen_search.main:index_main"
search = "tuebingen_search.main:search_main"

[tool.hatch.build.targets.wheel]
packages = ["src/tuebingen_search"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
