[project]
name = "tuebingen-search"
version = "0.1.0"
description = "Small search engine for TUEpedia HTML files"
requires-python = ">=3.10"
dependencies = [
    "msgpack>=1.1.0",
]

[project.scripts]
tuebingen-search = "tuebingen_search.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
